Fixed validator issues.

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en" dir="ltr">
 	<head>
 		<meta charset="utf-8">
-		<title></title>
+		<title>The Garlic</title>
 	</head>
 	<body>
 		<h1>The Garlic</h1>
 		<h2>BREAKING: The Slovak Legend of "Bryndzové halušky" Could Be Real</h2>
-		<img src="br-3179107752.jpeg"></img>
+		<img src="br-3179107752.jpeg" alt="Bryndzové Halušky">
 		<p>The Ankh-Morporkean explorer Rincewind has found evidence of "Bryndzové halušky" in the Slovak village of "Košice". This legendary dish is rumored to be a source of calcium, as well as a wide variety of healthy proteins.</p>
 		<p>Health benefits include strong bones, healthy fats, strong muscles, and more. Some stories hint about immortality, similar to that of Ambrosia.</p>
 		<p>Ankh-Morporkean cooks were unable to replicate this dish. They failed to obtain "Bryndza", an integral component, made out of sheep milk, according to locals. Slovakia and surrounding regions still remain as the only hotspots in which this dish has been spotted.</p>
@@ -33,7 +33,7 @@
 			</tbody>
 		</table>
 		<h2>Lorem Ipsum</h2>
-		<img src="Lorem-Ipsum-alternatives-2885578578.png"></img>
+		<img src="Lorem-Ipsum-alternatives-2885578578.png" alt="lorem ipsum">
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 		<h3>See also:</h3>
 		<a href="newsletter.html" target="_blank">The "Octagon", Finally Discovered</a>
