--- a/newsletter.html
+++ b/newsletter.html
@@ -2,12 +2,12 @@
 <html lang="en" dir="ltr">
 	<head>
 		<meta charset="utf-8">
-		<title></title>
+		<title>The Garlic</title>
 	</head>
 	<body>
 		<h1>The Garlic</h1>
 		<h2>The "Octagon", Finally Discovered</h2>
-		<img src="maxresdefault-880618630.jpeg"></img>
+		<img src="maxresdefault-880618630.jpeg" alt="Jack holding The Octagon that says &quot;STOP&quot; in white on black">
 		<p>Yesterday, world famous explorer Jack Black has finally discovered what he calls the "Octagon". Jack had been searching for this elusive shape since he was only 20 years old.</p>
 		<p>Why did he do it? He said, "For generations, my family has been in search for the "Octagon". None of my ancestors were successful, however, I am the first in the family to actually find the shape." It's likely Jack will soon win a Nobel Prize for this discovery.</p>
 
